--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "sass": "^1.69.3",
     "styled-components": "^6.1.0",
