--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "sass": "^1.69.3",
     "styled-components": "^6.1.0",
