--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^8.1.3",
     "sass": "^1.69.3",
     "styled-components": "^6.1.0",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "latest",
