--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "jwt-decode": "^3.1.2",
     "next": "latest",
+    "next-auth": "^4.24.4",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
