--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.1.2",
     "next": "latest",
     "next-auth": "^4.24.4",
+    "nprogress": "^0.2.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "latest",
+    "@types/nprogress": "^0.2.2",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
